# apps/api/lib/zanshin_api_web/router.ex
@@ -65,6 +65,7 @@ defmodule ZanshinApiWeb.Router do
     get "/analytics/matches/summary", AnalyticsMatchSummaryController, :index
     get "/analytics/events/feed", AnalyticsDashboardController, :event_feed
     get "/analytics/matches/state_overview", AnalyticsDashboardController, :match_state_overview
+    get "/analytics/dashboard/overview", AnalyticsDashboardController, :dashboard_overview
     post "/matches", MatchController, :create
     post "/matches/:id/transition", MatchStateController, :transition
     post "/matches/:id/score", MatchScoreController, :create
